<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cagliostro_regular"
        android:text="@string/ketik_pertanyaan"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_layout"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_field_pertanyaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukan_pertanyaan" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/cagliostro_regular"
        android:text="@string/batal"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/text_field_layout"
        app:layout_constraintTop_toBottomOf="@id/text_field_layout" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/cagliostro_regular"
        android:layout_marginEnd="8dp"
        android:text="@string/tambah"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/text_field_layout"
        app:layout_constraintTop_toBottomOf="@id/text_field_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>